--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -9,6 +9,7 @@
   "main": "server/index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon --watch server --watch .env --watch next.config.js server/index.js",
+    "dev-only-next": "next dev",
     "start": "node server/index.js",
     "build": "next build",
     "heroku-postbuild": "npm run build",
