--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -68,6 +68,7 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.3.1",
     "@republik/eslint-config-frontend": "*",
+    "@republik/tsconfig": "*",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@types/jest": "^27.5.0",
