--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.3.1",
     "@republik/eslint-config-frontend": "*",
+    "@republik/tsconfig": "*",
     "@stripe/stripe-js": "^1.22.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
