fix(docs): add back basepath to tsconfig

--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "@republik/tsconfig/nextjs.json",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {}
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
