fix(icons): clean up react deps, icon imports

--- a/docs/package.json
+++ b/docs/package.json
@@ -33,8 +33,6 @@
     "@next/eslint-plugin-next": "^13.2.4",
     "@republik/eslint-config-frontend": "*",
     "@republik/tsconfig": "*",
-    "@types/node": "16",
-    "@types/react": "^18.0.31",
-    "@types/react-dom": "^18.0.11"
+    "@types/node": "16"
   }
 }
