--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -49,6 +49,7 @@
     "@types/jest": "^27.5.0",
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@types/useragent": "2.3.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "abab": "^2.0.5",
