--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -5,7 +5,9 @@
   "types": "dist/types/index.d.ts",
   "main": "dist/icons.js",
   "module": "dist/icons.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "type": "module",
   "scripts": {
     "generate:icons": "svgr --out-dir ./lib/components ./lib/svg",
@@ -14,10 +16,7 @@
   },
   "devDependencies": {
     "@svgr/cli": "^6.1.2",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
-    "react": "^18.2.0",
     "typescript": "^4.7.2",
     "vite": "^4.1.0",
     "vite-plugin-dts": "^1.7.3"
