--- a/packages/styleguide/package.json
+++ b/packages/styleguide/package.json
@@ -124,6 +124,7 @@
     }
   },
   "dependencies": {
+    "@republik/icons": "*",
     "body-scroll-lock": "^3.1.5",
     "react-icons": "^4.3.1",
     "serve": "^13.0.2",
