fix(docs): remove react react-dom from nohoist

--- a/docs/package.json
+++ b/docs/package.json
@@ -5,9 +5,7 @@
   "main": "./lib/index.ts",
   "workspaces": {
     "nohoist": [
-      "next",
-      "react",
-      "react-dom"
+      "next"
     ]
   },
   "scripts": {
