fix(styleguide): wip icon migration

--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,5 @@
 {
-  "baseBranch": "origin/main",
+  "$schema": "https://turbo.build/schema.json",
   "pipeline": {
     "build": {
       "dependsOn": [
