--- a/packages/styleguide/package.json
+++ b/packages/styleguide/package.json
@@ -37,14 +37,14 @@
     "@catalog/core": "^4.0.1-canary.2",
     "@orbiting/remark-preset": "^1.2.4",
     "@republik/eslint-config-frontend": "*",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@types/jest": "^27.5.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.1",
     "@types/node": "^16.11.6",
     "@types/prop-types": "^15.7.4",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "babel-jest": "^27.5.1",
+    "babel-jest": "^29.5.0",
     "clipboard-copy": "^4.0.1",
     "commitizen": "^4.2.4",
     "concurrently": "^7.0.0",
@@ -66,7 +66,8 @@
     "graphql": "^15.3.0",
     "gsheets": "^3.0.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.5.1",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "lodash": "^4.17.21",
     "mdast-react-render": "^1.1.0",
     "prop-types": "^15.7.2",
@@ -106,8 +107,8 @@
     "dev": "yarn dev:lib",
     "dev:lib": "tsc -w --project tsconfig.dist.json",
     "dev:docs": "concurrently \"yarn:dev:lib\" \"SKIP_PREFLIGHT_CHECK=true BROWSER=none PORT=3003 react-scripts start\"",
-    "test": "CI=true react-scripts test",
-    "test:dev": "react-scripts test",
+    "test": "jest",
+    "test:dev": "jest --watch",
     "cloc": "find . -name '*.js' -not -path \"./node_modules*\" -not -path \"./lib*\" | xargs wc -l",
     "eject": "react-scripts eject",
     "semantic-release": "semantic-release",
@@ -128,6 +129,7 @@
     "slate": "^0.88.1",
     "slate-history": "^0.86.0",
     "slate-react": "^0.88.2",
+    "ts-jest": "^29.1.0",
     "use-memo-one": "^1.1.2"
   },
   "browserslist": [
