--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "docs",
       "apps/*",
       "packages/*",
+      "packages/mdast/*",
       "packages/backend-modules/*"
     ],
     "nohoist": [
