--- a/packages/styleguide/package.json
+++ b/packages/styleguide/package.json
@@ -21,7 +21,7 @@
     "downshift": "^2.2.2",
     "glamor": "^2.20.40",
     "lodash": "4.x",
-    "mdast-react-render": ">=1.1",
+    "mdast-react-render": "*",
     "prop-types": ">=15.5",
     "react": "^18.2.0",
     "react-color": "^2.18.1",
@@ -35,7 +35,7 @@
     "@apollo/client": "~3.5.10",
     "@babel/standalone": "^7.15.8",
     "@catalog/core": "^4.0.1-canary.2",
-    "@orbiting/remark-preset": "^1.2.4",
+    "@orbiting/remark-preset": "*",
     "@republik/eslint-config-frontend": "*",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -68,7 +68,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "lodash": "^4.17.21",
-    "mdast-react-render": "^1.1.0",
+    "mdast-react-render": "*",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-autocomplete": "^1.4.1",
@@ -80,7 +80,7 @@
     "rw": "^1.3.3",
     "scroll-into-view": "1.15.0",
     "semantic-release": "^17.1.1",
-    "slate-mdast-serializer": "^3",
+    "slate-mdast-serializer": "*",
     "topojson": "^3.0.2",
     "tslib": "^2.3.1",
     "typescript": "^4.7.2",
