--- a/.github/workflows/styleguide.yml
+++ b/.github/workflows/styleguide.yml
@@ -10,6 +10,9 @@ jobs:
       with:
         node-version: '18.x'
     - run: SERVER=styleguide ./scripts/prune.sh
+    - name: Build workspace dependencies
+      run: |
+        yarn turbo run build --filter=@project-r/styleguide... --filter=!@project-r/styleguide
     - name: Test and Pack
       working-directory: ./packages/styleguide
       run: |
