--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -76,9 +76,10 @@
     "cross-env": "^5.2.1",
     "dotenv": "^6.2.0",
     "enzyme": "^3.11.0",
-    "jest": "^29.5.0",
     "glob": "^7.1.6",
     "gsheets": "^2.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "nodemon": "^2.0.6",
     "typescript": "^4.7.2"
   }
