--- a/apps/publikator/package.json
+++ b/apps/publikator/package.json
@@ -43,6 +43,7 @@
         "enzyme": "^3.11.0",
         "gsheets": "^3.0.0",
         "jest": "^29.5.0",
+        "jest-environment-jsdom": "^29.5.0",
         "nodemon": "^2.0.4",
         "raf": "^3.4.0"
     },
