--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -55,6 +55,7 @@
     "cross-env": "^7.0.3",
     "gsheets": "^3.0.1",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "nodemon": "^2.0.15",
     "typescript": "^4.7.2"
   },
