--- a/packages/backend-modules/assets/package.json
+++ b/packages/backend-modules/assets/package.json
@@ -23,6 +23,7 @@
     "aws-sdk": "^2.899.0",
     "bluebird": "^3.7.2",
     "check-env": "^1.3.0",
+    "color-string": "^1.9.0",
     "d3-array": "^2.4.0",
     "debug": "^4.1.1",
     "file-type-stream2": "^1.0.2",
