--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
       "docs",
       "apps/*",
       "packages/*",
-      "packages/backend-modules/*"
+      "packages/backend-modules/*",
+      "!templates/*"
     ],
     "nohoist": [
       "styleguide/slate",
