--- a/packages/dynamic-components/package.json
+++ b/packages/dynamic-components/package.json
@@ -2,9 +2,31 @@
   "name": "@republik/dynamic-components",
   "version": "0.0.0",
   "private": true,
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsup index.js --format cjs,esm --minify --clean --out-dir dist --loader \".js=jsx\"",
+    "dev": "tsup index.js --format cjs,esm --minify --clean --out-dir dist --sourcemap --watch --loader \".js=jsx\"",
+    "test": "jest",
+    "test:dev": "jest --watch"
+  },
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "@project-r/styleguide": "*",
+    "@swc/core": "^1.3.57",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "ts-jest": "^29.1.0",
+    "tsup": "^6.7.0",
+    "typescript": "^4.7.2"
+  },
   "peerDependencies": {
     "@project-r/styleguide": "*",
     "glamor": "^2.20.40",
