--- a/packages/mdast-templates/package.json
+++ b/packages/mdast-templates/package.json
@@ -2,11 +2,30 @@
   "name": "@republik/mdast-templates",
   "version": "0.0.0",
   "private": true,
-  "exports": {
-    ".": "./index.ts"
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsup index.ts --format cjs,esm --minify --clean --out-dir dist --dts --loader \".js=jsx\"",
+    "dev": "tsup index.ts --format cjs,esm --minify --clean --out-dir dist --dts --sourcemap --watch --loader \".js=jsx\""
   },
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "@project-r/styleguide": "*",
+    "@republik/dynamic-components": "*",
+    "@swc/core": "^1.3.57",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "ts-jest": "^29.1.0",
+    "tsup": "^6.7.0",
+    "typescript": "^4.7.2"
+  },
   "peerDependencies": {
     "@project-r/styleguide": "*",
     "@republik/dynamic-components": "*",
