--- a/apps/publikator/package.json
+++ b/apps/publikator/package.json
@@ -37,6 +37,7 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^14.0.0",
         "@types/jest": "^29.5.1",
+        "@types/lodash": "^4.14.194",
         "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
         "cross-env": "^5.2.1",
         "diff": "^3.5.0",
