--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -68,6 +68,7 @@
     "@juggle/resize-observer": "^3.4.0",
     "@next/bundle-analyzer": "^12.3.1",
     "@project-r/styleguide": "*",
+    "@republik/dynamic-components": "*",
     "@republik/icons": "*",
     "@republik/nextjs-apollo-client": "*",
     "@stripe/react-stripe-js": "^1.7.0",
