--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -46,7 +46,6 @@
     "@testing-library/react": "^14.0.0",
     "@types/applepayjs": "^3.0.3",
     "@types/events": "^3.0.0",
-    "@types/http-proxy": "^1.17.10",
     "@types/jest": "^29.5.1",
     "@types/node": "^16.11.21",
     "@types/react": "^18.0.28",
@@ -104,7 +103,7 @@
     "glamor": "^2.20.40",
     "graphql": "^15.3.0",
     "helmet": "^3.23.3",
-    "http-proxy": "^1.18.1",
+    "http-proxy-middleware": "^2.0.6",
     "immer": "^9.0.12",
     "jose": "^4.8.3",
     "jstoxml": "^3.2.3",
