--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -117,6 +117,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^4.3.0",
+    "react-globe.gl": "2.24.1",
     "react-maskedinput": "^4.0.1",
     "react-spring": "^8.0.27",
     "react-textarea-autosize": "^7.1.2",
