--- a/packages/styleguide/package.json
+++ b/packages/styleguide/package.json
@@ -49,7 +49,6 @@
   "devDependencies": {
     "@apollo/client": "~3.5.10",
     "@babel/standalone": "^7.15.8",
-    "@catalog/core": "^4.0.1-canary.2",
     "@orbiting/remark-preset": "^1.2.4",
     "@republik/eslint-config-frontend": "*",
     "@republik/icons": "*",
@@ -64,7 +63,6 @@
     "clipboard-copy": "^4.0.1",
     "commitizen": "^4.2.4",
     "concurrently": "^7.0.0",
-    "core-js": "^3.19.0",
     "cz-conventional-changelog": "^3.3.0",
     "d3-array": "^1.2.1",
     "d3-color": "^1.4.1",
@@ -92,14 +90,12 @@
     "react-color": "^2.18.1",
     "react-dom": "^18.2.0",
     "react-maskedinput": "^4.0.1",
-    "react-scripts": "^3.4.1",
     "react-textarea-autosize": "^5.1.0",
     "rw": "^1.3.3",
     "scroll-into-view": "1.15.0",
     "semantic-release": "^17.1.1",
     "slate-mdast-serializer": "^3",
     "topojson": "^3.0.2",
-    "tslib": "^2.3.1",
     "typescript": "^4.7.2",
     "validate-commit-msg": "^2.14.0"
   },
@@ -115,19 +111,12 @@
   },
   "scripts": {
     "commit": "git-cz",
-    "prepublishOnly": "yarn prebuild && yarn build:lib",
-    "build": "yarn build:lib && if [ \"$SERVER\" = \"styleguide\" ]; then yarn build:docs; fi",
-    "build:lib": "tsc --project tsconfig.dist.json",
-    "build:docs": "react-scripts build",
+    "prepublishOnly": "yarn prebuild && yarn build",
+    "build": "tsc --project tsconfig.dist.json",
     "start": "serve -s build",
-    "dev": "yarn dev:lib",
-    "dev:lib": "tsc -w --project tsconfig.dist.json",
-    "dev:docs": "concurrently \"yarn:dev:lib\" \"SKIP_PREFLIGHT_CHECK=true BROWSER=none PORT=3003 react-scripts start\"",
+    "dev": "tsc -w --project tsconfig.dist.json",
     "test": "jest",
     "test:dev": "jest --watch",
-    "cloc": "find . -name '*.js' -not -path \"./node_modules*\" -not -path \"./lib*\" | xargs wc -l",
-    "eject": "react-scripts eject",
-    "semantic-release": "semantic-release",
     "commitmsg": "validate-commit-msg",
     "translations-raw": "NODE_OPTIONS='-r dotenv/config' gsheets --key=1sMS5u4SIFY2loAmx8jftDXqTbq2RheJLY7FBeXSm1Tc --title=live --pretty --out src/lib/translations.json",
     "translations": "yarn translations-raw && git add -p src/lib/translations.json && git checkout -- src/lib/translations.json",
