chore(styleguide): get rid off .env.test & update .env.example

--- a/packages/styleguide/.env.example
+++ b/packages/styleguide/.env.example
@@ -1,4 +1,2 @@
-# Prevent ESLint error when using react-scripts
-SKIP_PREFLIGHT_CHECK=true
-
-REACT_APP_API_URL=http://localhost:5010/graphql
+# Google Sheet API key used to load translations
+GSHEETS_API_KEY=
