fix(publikator): add lib measuring mp3 duration and add to meta

--- a/packages/backend-modules/publikator/.gitignore
+++ b/packages/backend-modules/publikator/.gitignore
@@ -2,6 +2,7 @@ lib/auphonic/**/*.js
 lib/File/**/*.js
 lib/cache/**/*.js
 lib/Derivative/**/*.js
+lib/audioSource.js
 lib/phases.js
 loaders/**/*.js
 script/*.js
