--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -19,9 +19,7 @@
     "translations-raw": "NODE_OPTIONS='-r dotenv/config' gsheets --key=1a-8RESf0Yjo2Mu15Q4SGWTmnY3ifuFbCVSD7WyYRhT0 --title=live --pretty --out lib/translations.json",
     "translations": "npm run translations-raw && git add -p lib/translations.json && git checkout -- lib/translations.json",
     "translations-vote": "NODE_OPTIONS='-r dotenv/config' gsheets --key=1oBlTiPKIon4p5aek5vEXluWMn0TRwrk-JftznGjTmdQ --title=live --pretty --out components/Vote/translations-vote.json",
-    "analyze": "ANALYZE=true next build",
-    "sg:link": "./scripts/sg_link.sh",
-    "sg:unlink": "./scripts/sg_unlink.sh"
+    "analyze": "ANALYZE=true next build"
   },
   "cacheDirectories": [
     "node_modules",
