--- a/apps/publikator/package.json
+++ b/apps/publikator/package.json
@@ -113,6 +113,7 @@
     "topojson": "^3.0.2",
     "unified": "^7.0.0",
     "unist-util-visit": "^2.0.3",
+    "url": "^0.11.0",
     "validator": "^10.11.0"
   }
 }
