--- a/packages/mdast/remark-preset/package.json
+++ b/packages/mdast/remark-preset/package.json
@@ -2,42 +2,28 @@
   "name": "@republik/remark-preset",
   "version": "1.2.4",
   "description": "a preconfigured mdast processor with zones and meta data",
-  "keywords": [
-    "remark",
-    "mdast",
-    "markdown",
-    "md",
-    "serializer",
-    "serialization",
-    "parse",
-    "stringify"
-  ],
-  "main": "lib/index.js",
+  "private": true,
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "prepublish": "npm run prebuild && npm run build",
-    "prebuild": "rimraf lib",
-    "build": "babel src --out-dir lib",
-    "dev": "babel -w src --out-dir lib",
-    "test": "babel-tape-runner src/**/*.test.js | faucet",
-    "tape": "babel-tape-runner"
+    "build": "tsup src/index.ts --format cjs,esm --dts --minify --clean --out-dir dist",
+    "dev": "tsup src/index.ts --format cjs,esm --dts --minify --clean --out-dir dist --sourcemap --watch",
+    "test": "jest",
+    "test:dev": "jest --watch"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/orbiting/mdast.git"
-  },
-  "author": "Thomas Preusse <t@preus.se> (https://t.preus.se/)",
-  "license": "BSD-3-Clause",
-  "bugs": {
-    "url": "https://github.com/orbiting/mdast/issues"
-  },
-  "homepage": "https://github.com/orbiting/mdast/tree/master/packages/remark-preset#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-tape-runner": "^2.0.1",
-    "faucet": "0.0.1",
-    "rimraf": "^2.6.2",
-    "tape": "^4.8.0"
+    "@republik/tsconfig": "*",
+    "@swc/core": "^1.3.57",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "tsup": "^6.7.0",
+    "typescript": "^4.7.2"
   },
   "dependencies": {
     "js-yaml": "^3.10.0",
