--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -96,6 +96,7 @@
     "events": "^3.3.0",
     "express": "^4.17.2",
     "express-basic-auth": "^1.2.1",
+    "express-ipfilter": "^1.3.1",
     "express-rate-limit": "^5.5.1",
     "framer-motion": "^10.12.4",
     "glamor": "^2.20.40",
