docs(www/deny-ip): add DENY_IPS to env.example

--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -62,6 +62,11 @@ PAYPAL_DONATE_LINK=https://www.sandbox.paypal.com/cgi-bin/webscr?cmd=_s-xclick&h
 # CURTAIN_BACKDOOR_URL=/EinGeheimerTestUrl
 # CURTAIN_UA_ALLOW_LIST=PhantomJS,facebookexternalhit/1.1
 
+# Deny IP adresses/ranges (e.g. to block annoying crawlers).
+# Must be a JSON array.
+# See https://github.com/jetersen/express-ipfilter for which patterns are possible
+# DENY_IPS='["127.0.0.1"]'
+
 # DISCUSSION_POLL_INTERVAL_MS=10000
 # STATS_POLL_INTERVAL_MS=10000
 
