--- a/packages/mdast/slate-mdast-serializer/package.json
+++ b/packages/mdast/slate-mdast-serializer/package.json
@@ -1,45 +1,32 @@
 {
   "name": "@republik/slate-mdast-serializer",
-  "version": "3.0.0",
+  "version": "2.0.0",
   "description": "serialize slate to mdast and vice versa",
-  "keywords": [
-    "slate",
-    "mdast",
-    "serializer",
-    "markdown",
-    "md",
-    "serialization",
-    "schema"
-  ],
-  "main": "lib/index.js",
+  "private": true,
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "prepublish": "npm run prebuild && npm run build",
-    "prebuild": "rimraf lib",
-    "build": "babel src --out-dir lib",
-    "dev": "babel -w src --out-dir lib",
-    "test": "babel-tape-runner src/**/*.test.js | faucet",
-    "tape": "babel-tape-runner"
+    "build": "tsup src/index.ts --format cjs,esm --dts --minify --clean --out-dir dist",
+    "dev": "tsup src/index.ts --format cjs,esm --dts --minify --clean --out-dir dist --sourcemap --watch",
+    "test": "jest",
+    "test:dev": "jest --watch"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/orbiting/mdast.git"
-  },
-  "author": "Thomas Preusse <t@preus.se> (https://t.preus.se/)",
-  "license": "BSD-3-Clause",
-  "bugs": {
-    "url": "https://github.com/orbiting/mdast/issues"
-  },
-  "homepage": "https://github.com/orbiting/mdast/tree/master/packages/@republik/slate-mdast-serializer#readme",
   "devDependencies": {
-    "@republik/remark-preset": "*",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-tape-runner": "^2.0.1",
-    "faucet": "0.0.1",
-    "immutable": "^3.8.2",
-    "rimraf": "^2.6.2",
+    "@republik/tsconfig": "*",
+    "@swc/core": "^1.3.57",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "slate": "~0.31",
-    "tape": "^4.8.0"
+    "ts-jest": "^29.1.0",
+    "tsup": "^6.7.0",
+    "typescript": "^4.7.2"
   },
   "peerDependencies": {
     "slate": "~0.31"
