chore(mdast): put all imports from mdast react render into indexts

--- a/packages/mdast/slate-mdast-serializer/package.json
+++ b/packages/mdast/slate-mdast-serializer/package.json
@@ -13,6 +13,7 @@
     "test:dev": "jest --watch"
   },
   "devDependencies": {
+    "@republik/remark-preset": "*",
     "@republik/tsconfig": "*",
     "@swc/core": "^1.3.57",
     "@testing-library/jest-dom": "^5.16.5",
