--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -104,6 +104,7 @@
     "helmet": "^3.23.3",
     "immer": "^9.0.12",
     "jose": "^4.8.3",
+    "jotai": "^2.2.0",
     "jstoxml": "^3.2.3",
     "load-script": "^1.0.0",
     "lodash": "^4.17.21",
