chore: ts config

--- a/packages/backend-modules/schedulers/package.json
+++ b/packages/backend-modules/schedulers/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/republik/plattform#readme",
   "scripts": {
+    "dev": "tsc -w",
+    "build": "tsc",
     "link": "yarn link"
   },
   "dependencies": {
