refactor: typescriptify intervalScheduler

--- a/packages/backend-modules/schedulers/package.json
+++ b/packages/backend-modules/schedulers/package.json
@@ -24,5 +24,9 @@
   "dependencies": {
     "moment": "^2.26.0",
     "redlock": "^4.1.0"
+  },
+  "devDependencies": {
+    "@types/bluebird": "^3.5.38",
+    "@types/redlock": "^4.0.4"
   }
 }
