--- a/packages/styleguide/package.json
+++ b/packages/styleguide/package.json
@@ -42,6 +42,7 @@
     "translations": "yarn translations-raw && git add -p src/lib/translations.json && git checkout -- src/lib/translations.json"
   },
   "dependencies": {
+    "@republik/story-loader": "*",
     "body-scroll-lock": "^3.1.5",
     "serve": "^13.0.2",
     "slate": "^0.88.1",
