feat(StoryComps): wip dropdown

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
       "apps/*",
       "packages/*",
       "packages/mdast/*",
+      "packages/stories/*",
       "packages/backend-modules/*"
     ],
     "nohoist": [
