feat(StoryComps): auf den punkt use-case

--- a/packages/stories/stories-the-dot-banks/package.json
+++ b/packages/stories/stories-the-dot-banks/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@republik/story-loader",
+  "name": "@republik/stories-the-dot-banks",
   "version": "0.0.1",
-  "description": "renders a story component based on its name",
+  "description": "banks scrolly",
   "private": true,
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -11,9 +11,7 @@
     "dev": "node_modules/.bin/tsup src/index.ts --format cjs,esm --dts --minify --clean --out-dir dist --sourcemap --watch"
   },
   "dependencies": {
-    "@republik/stories-example-pink": "*",
-    "@republik/stories-example-blue": "*",
-    "@republik/stories-the-dot-banks": "*"
+    "framer-motion": "^10.12.4"
   },
   "devDependencies": {
     "@republik/tsconfig": "*",
