chore(ts): upgrade typescript to v5, move to root package.json

--- a/packages/backend-modules/types/package.json
+++ b/packages/backend-modules/types/package.json
@@ -19,9 +19,7 @@
     "link": "yarn link"
   },
   "dependencies": {},
-  "devDependencies": {
-    "typescript": "^4.7.2"
-  },
+  "devDependencies": {},
   "files": [
     "tsconfig-backend.json"
   ]
