--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -80,7 +80,6 @@
     "gsheets": "^2.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "nodemon": "^2.0.6",
-    "typescript": "^4.7.2"
+    "nodemon": "^2.0.6"
   }
 }
