--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -54,8 +54,7 @@
     "gsheets": "^3.0.1",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "nodemon": "^2.0.15",
-    "typescript": "^4.7.2"
+    "nodemon": "^2.0.15"
   },
   "dependencies": {
     "@apollo/client": "~3.5.10",
