--- a/packages/mdast/mdast-react-render/package.json
+++ b/packages/mdast/mdast-react-render/package.json
@@ -25,8 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-jest": "^29.1.0",
-    "tsup": "^6.7.0",
-    "typescript": "^4.7.2"
+    "tsup": "^6.7.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
