--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -66,6 +66,7 @@
     "@next/bundle-analyzer": "^12.3.1",
     "@project-r/styleguide": "*",
     "@republik/icons": "*",
+    "@republik/mdast-react-render": "*",
     "@republik/nextjs-apollo-client": "*",
     "@stripe/react-stripe-js": "^1.7.0",
     "@use-it/event-listener": "^0.1.7",
@@ -108,8 +109,8 @@
     "load-script": "^1.0.0",
     "lodash": "^4.17.21",
     "lru-cache": "^4.1.3",
-    "@republik/mdast-react-render": "*",
     "next": "^12.3.1",
+    "next-themes": "^0.2.1",
     "next-transpile-modules": "^9.0.0",
     "photoswipe": "^4.1.3",
     "prop-types": "^15.8.1",
