chore(env): update mailchimp env variables in env example

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -293,9 +293,10 @@ PARKING_USER_ID=
 
 # mailchimp setup
 MAILCHIMP_MAIN_LIST_ID=
+MAILCHIMP_ONBOARDING_AUDIENCE_ID=
 MAILCHIMP_INTEREST_NEWSLETTER_DAILY=
 MAILCHIMP_INTEREST_NEWSLETTER_WEEKLY=
-MAILCHIMP_INTEREST_NEWSLETTER_FEUILLLETON=
+#MAILCHIMP_INTEREST_NEWSLETTER_FEUILLLETON=
 MAILCHIMP_INTEREST_NEWSLETTER_PROJECTR=
 MAILCHIMP_INTEREST_MEMBER=
 MAILCHIMP_INTEREST_PLEDGE=
