--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,4 +24,5 @@ jobs:
           node-version: 18.x
           cache: 'yarn'
       - run: yarn --frozen-lockfile
+      - run: yarn turbo run build
       - run: yarn test
