Revert "chore: update turborepo to v1.10.12 (#527)"
This reverts commit afbaed0d165ea1bd0e6991afb6bfec2a39c235f9.

--- a/turbo.json
+++ b/turbo.json
@@ -7,8 +7,7 @@
       ],
       "outputs": [
         "dist/**",
-        ".next/**",
-        "!.next/cache/**"
+        ".next/**"
       ],
       "dotEnv": [
         ".env.production.local",
@@ -66,21 +65,6 @@
     },
     "lint": {
       "outputs": []
-    },
-    "start": {
-      "persistent": true,
-      "dependsOn": [
-        "^build",
-        "build"
-      ],
-      "dotEnv": [
-        ".env.production.local",
-        ".env.development.local",
-        ".env.local",
-        ".env.production",
-        ".env.development",
-        ".env"
-      ]
     },
     "dev": {
       "cache": false,
