--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -72,6 +72,7 @@
     "@use-it/event-listener": "^0.1.7",
     "apollo-fetch": "^0.7.0",
     "auto-text-size": "0.2.1",
+    "axios": "^1.4.0",
     "body-parser": "^1.19.1",
     "chalk": "^4.1.2",
     "clipboard-copy": "^3.2.0",
