--- a/packages/styleguide/package.json
+++ b/packages/styleguide/package.json
@@ -60,6 +60,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/body-scroll-lock": "^3.1.0",
+    "@types/d3-array": "1.2.1",
+    "@types/d3-format": "1.3.1",
     "@types/d3-time-format": "2.1.1",
     "@types/jest": "^29.5.1",
     "@types/node": "^16.11.6",
