feat: jest extension config that works

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "mdx.experimentalLanguageServer": true
+  "mdx.experimentalLanguageServer": true,
+  "jest.jestCommandLine": "yarn test",
+  "jest.rootPath": "packages/backend-modules/testing"
 }
