--- a/docs/package.json
+++ b/docs/package.json
@@ -14,6 +14,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@project-r/styleguide": "*",
+    "@republik/icons": "*",
+    "@republik/ui-docs-demo": "*",
     "next": "^13.2.4",
     "nextra": "^2.3.0",
     "nextra-theme-docs": "^2.3.0",
@@ -21,11 +24,8 @@
     "react-docgen": "^6.0.0-beta.6",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
-    "unist-util-visit": "^4.1.2",
     "unist-builder": "^3.0.1",
-    "@project-r/styleguide": "*",
-    "@republik/icons": "*",
-    "@republik/ui-docs-demo": "*"
+    "unist-util-visit": "^4.1.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.2.4",
