--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -6,7 +6,7 @@
     "node": "^18.0.0"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon --watch server --watch .env --watch server/constants.js server/server.js",
+    "dev": "concurrently \"graphql-codegen -w\" \"cross-env NODE_ENV=development nodemon --watch server --watch .env --watch server/constants.js server/server.js\"",
     "build": "next build",
     "start": "node server/server.js",
     "test": "jest",
@@ -27,6 +27,7 @@
     "@next/bundle-analyzer": "^12.3.1",
     "@project-r/styleguide": "*",
     "@republik/icons": "*",
+    "@republik/mdast-react-render": "*",
     "@republik/nextjs-apollo-client": "*",
     "apollo-cache-inmemory": "^1.6.6",
     "d3-array": "^1.2.4",
@@ -46,7 +47,6 @@
     "helmet": "^3.23.3",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
-    "@republik/mdast-react-render": "*",
     "moment": "^2.29.1",
     "next": "^12.3.1",
     "next-transpile-modules": "^9.0.0",
@@ -65,6 +65,9 @@
     "validator": "^10.11.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^3.2.2",
+    "@graphql-codegen/client-preset": "^2.1.1",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@next/eslint-plugin-next": "^12.3.1",
     "@republik/eslint-config-frontend": "*",
     "@republik/tsconfig": "*",
@@ -73,6 +76,7 @@
     "@types/jest": "^29.5.1",
     "@types/node": "^16.11.21",
     "@types/react": "^18.0.28",
+    "concurrently": "^8.2.1",
     "cross-env": "^5.2.1",
     "dotenv": "^6.2.0",
     "enzyme": "^3.11.0",
