feat(admin): get rid of custom express server
getting rid of the express server also required refactoring on how the environment-variables are being loaded,
as previously a own solution was added (backe when next.js didn't support env-variables out of the box).

In order for the styleguide to be able to access the 'SG_' prefixed env-variables, the 'SG_' variables are
manually rexported in the next.js' configs 'env' object.

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -6,9 +6,9 @@
     "node": "^18.0.0"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon --watch server --watch .env --watch server/constants.js server/server.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "node server/server.js",
+    "start": "next start",
     "test": "jest",
     "test:watch": "jest --watch",
     "analyze": "ANALYZE=true next build",
