--- a/apps/admin/.env.example
+++ b/apps/admin/.env.example
@@ -1,15 +1,9 @@
-PORT=3006
-
-PUBLIC_BASE_URL=http://localhost:3006
-
-BASIC_AUTH_PASS=
-BASIC_AUTH_USER=
-BASIC_AUTH_REALM=
-
-API_URL=http://localhost:5010/graphql
+NEXT_PUBLIC_PUBLIC_BASE_URL=http://localhost:3006
+NEXT_PUBLIC_API_URL=http://localhost:5010/graphql
+NEXT_PUBLIC_REPUBLIK_FRONTEND_URL=http://localhost:3010
 
 # List of email addresses belonging to admin instance
-#MAILBOX_SELF=kontakt@republik.ch,office@project-r.construction
+#NEXT_PUBLIC_MAILBOX_SELF=kontakt@republik.ch,office@project-r.construction
 
 # List of URLs which fetch this website in a frame
 #CSP_FRAME_ANCESTORS=https://domain.tld,https://domain2.tld
