--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -6,7 +6,7 @@
     "node": "^18.0.0"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "PORT=3006 next dev",
     "build": "next build",
     "start": "next start",
     "test": "jest",
