feat(publikator): get rid of express server

--- a/apps/publikator/.env.example
+++ b/apps/publikator/.env.example
@@ -1,17 +1,17 @@
 PORT=3005
 
-API_URL=http://localhost:5010/graphql
-API_WS_URL=ws://localhost:5010/graphql
+NEXT_PUBLIC_API_URL=http://localhost:5010/graphql
+NEXT_PUBLIC_API_WS_URL=ws://localhost:5010/graphql
 # url to post change activity to on window close
-API_UNCOMMITTED_CHANGES_URL=http://localhost:5010/publikator/uncommittedChanges
+NEXT_PUBLIC_API_UNCOMMITTED_CHANGES_URL=http://localhost:5010/publikator/uncommittedChanges
 
 # same as GITHUB_LOGIN in backend
-GITHUB_ORG=
+NEXT_PUBLIC_GITHUB_ORG=
 
-UNCOMMITTED_CHANGES_POLL_INTERVAL_MS=5010
+NEXT_PUBLIC_UNCOMMITTED_CHANGES_POLL_INTERVAL_MS=5010
 
-FRONTEND_BASE_URL=http://localhost:3010
-PUBLIC_BASE_URL=http://localhost:3005
+NEXT_PUBLIC_FRONTEND_BASE_URL=http://localhost:3010
+NEXT_PUBLIC_PUBLIC_BASE_URL=http://localhost:3005
 # PIWIK_URL_BASE=https://piwik.example.com
 # PIWIK_SITE_ID=2
 
