--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -2,8 +2,15 @@
   "extends": "@republik/tsconfig/nextjs.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": {}
+    "paths": {},
+    "moduleResolution": "Bundler"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
