chore: add @next/env to all frontend jest.setup.js

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -62,6 +62,7 @@
     "validator": "^10.11.0"
   },
   "devDependencies": {
+    "@next/env": "^12.3.1",
     "@next/eslint-plugin-next": "^12.3.1",
     "@republik/eslint-config-frontend": "*",
     "@republik/tsconfig": "*",
