--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -54,7 +54,8 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "@apollo/client": "~3.8.1",
+    "@apollo/client": "^3.8.3",
+    "@apollo/experimental-nextjs-app-support": "^0.4.2",
     "@dnd-kit/core": "^6.0.5",
     "@dnd-kit/modifiers": "^6.0.0",
     "@dnd-kit/sortable": "^7.0.1",
