--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -6,7 +6,7 @@
         "name": "next"
       }
     ],
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     "baseUrl": ".",
     "paths": { "@app/*": ["./src/*"] }
   },
