chore: update renovate config to add certain labels to PRs

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -5,6 +5,10 @@
   ],
   "automerge": false,
   "commitMessagePrefix": "chore(deps): renovate",
+  "labels": [
+    "renovate",
+    "maintenance"
+  ],
   "packageRules": [
     {
       "enabled": false,
