--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,7 +4,7 @@
     "config:base"
   ],
   "automerge": false,
-  "commitMessagePrefix": "chore(deps): renovate",
+  "commitMessagePrefix": "chore(renovate): ",
   "labels": [
     "renovate",
     "maintenance"
