feat(www/new-hope): add client to interact with DatoCMS

--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -107,3 +107,6 @@ JWT_ISSUER=localhost
 
 # If the API is HTTP basic-auth protected, you can generate a basic authorization header with ``Basic ${(new Buffer('user:password')).toString('base64')}`` in Node.js and use it with `API_AUTHORIZATION_HEADER`.
 # API_AUTHORIZATION_HEADER=
+
+DATO_CMS_API_URL=https://graphql.datocms.com
+DATO_CMS_API_TOKEN=
