feat(www/new-hope): add '/api/revalidate' endpoint to be used as a webhook and use ssr-apollo-client for cms-client

--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -108,5 +108,9 @@ JWT_ISSUER=localhost
 # If the API is HTTP basic-auth protected, you can generate a basic authorization header with ``Basic ${(new Buffer('user:password')).toString('base64')}`` in Node.js and use it with `API_AUTHORIZATION_HEADER`.
 # API_AUTHORIZATION_HEADER=
 
+# Environment variables for the CMS
 DATO_CMS_API_URL=https://graphql.datocms.com
 DATO_CMS_API_TOKEN=
+
+# Secret used to allow revalidation of static pages in app-dir
+REVALIDATION_SECRET=
