feat(www/new-hope): improve revalidation api-endpoint

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -135,6 +135,7 @@
     "topojson": "^3.0.2",
     "useragent": "^2.3.0",
     "uuid": "^3.4.0",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "zod": "^3.22.2"
   }
 }
