chore: update renovate config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -9,11 +9,13 @@
     "renovate",
     "maintenance"
   ],
-  "assignees": [
-    "@trm217",
-    "@jstcki"
+  "schedule": [
+    "every wednesday"
   ],
   "vulnerabilityAlerts": {
+    "schedule": [
+      "at any time"
+    ],
     "labels": [
       "renovate",
       "maintenance",
