chore(tasks): add default build task (yarn install dependencies)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,19 @@
       "problemMatcher": []
     },
     {
+      "label": "Install depencencies",
+      "type": "shell",
+      "command": "yarn",
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "presentation": {
+        "panel": "new",
+        "close": true
+      }
+    },
+    {
       "label": "dev:www-server",
       "type": "shell",
       "command": "yarn turbo run dev --filter=@orbiting/www-app...",
