--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -66,7 +66,7 @@
       "type": "typescript",
       "tsconfig": "apps/www/tsconfig.json",
       "option": "watch",
-      "problemMatcher": ["$tsc-watch"],
+      "problemMatcher": [{ "base": "$tsc-watch", "applyTo": "allDocuments" }],
       "label": "tsc:www",
       "presentation": {
         "group": "dev",
