--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -6,6 +6,7 @@
         "name": "next"
       }
     ],
+    "target": "ES2020",
     "strictNullChecks": false,
     "baseUrl": ".",
     "paths": { "@app/*": ["./src/*"] }
