feat(new-hope): add zod + react-hook-form

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     ],
     "nohoist": [
       "styleguide/slate",
-      "styleguide/slate-*"
+      "styleguide/slate-*",
+      "**/zod"
     ]
   },
   "scripts": {
