--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -71,6 +71,7 @@
     "@dnd-kit/sortable": "^7.0.1",
     "@dnd-kit/utilities": "^3.2.0",
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@hookform/resolvers": "^3.3.1",
     "@juggle/resize-observer": "^3.4.0",
     "@next/bundle-analyzer": "^13.5.1",
     "@project-r/styleguide": "*",
@@ -130,6 +131,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^4.3.0",
     "react-error-boundary": "^4.0.10",
+    "react-hook-form": "^7.46.2",
     "react-maskedinput": "^4.0.1",
     "react-spring": "^8.0.27",
     "react-textarea-autosize": "^7.1.2",
@@ -141,6 +143,6 @@
     "useragent": "^2.3.0",
     "uuid": "^3.4.0",
     "validator": "^13.7.0",
-    "zod": "^3.22.2"
+    "zod": "3.22.2"
   }
 }
