feat(www): allow dynamically setting the DATO_CMS_ENVIRONMENT over env

--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -111,6 +111,8 @@ JWT_ISSUER=localhost
 # Environment variables for the CMS
 DATO_CMS_API_URL=https://graphql.datocms.com
 DATO_CMS_API_TOKEN=
+# Controls which environment is used for the CMS
+DATO_CMS_ENVIRONMENT=development
 
 # Secret used to allow revalidation of static pages in app-dir
 REVALIDATION_SECRET=
