feat(challenge-accepted): datocms migrations

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/republik/plattform#readme",
   "devDependencies": {
+    "@datocms/cli": "^1.2.2",
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/client-preset": "4.1.0",
     "@graphql-codegen/introspection": "4.0.0",
