chore: add dev:docs vscode task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -37,6 +37,18 @@
       "problemMatcher": []
     },
     {
+      "label": "dev:docs",
+      "type": "shell",
+      "command": "yarn turbo run dev --filter=@republik/docs...",
+      "presentation": {
+        "group": "dev",
+        "panel": "dedicated",
+        "close": true,
+        "showReuseMessage": false
+      },
+      "problemMatcher": []
+    },
+    {
       "label": "proxy:staging",
       "type": "shell",
       "command": "yarn yaproxy:staging",
