chore(www): upgrade uuid package

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -125,7 +125,7 @@
     "glamor": "^2.20.40",
     "graphql": "^15.3.0",
     "helmet": "^3.23.3",
-    "ics": "^3.5.0",
+    "ical-generator": "^6.0.0",
     "immer": "^9.0.12",
     "jose": "^4.8.3",
     "jotai": "^2.2.0",
