feat: setup datatrans, simple flow

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -354,6 +354,10 @@ STRIPE_ACCOUNT_ID_REPUBLIK=
 STRIPE_PUBLISHABLE_KEY_REPUBLIK=
 STRIPE_SECRET_KEY_REPUBLIK=
 
+# datatrans
+DATATRANS_MERCHANT_ID=123123
+DATATRANS_MERCHANT_PASSWORD=
+
 #############
 # twilio
 #############
