--- a/packages/backend-modules/republik-crowdfundings/.gitignore
+++ b/packages/backend-modules/republik-crowdfundings/.gitignore
@@ -1,3 +1,4 @@
+lib/payments/datatrans/*.js
 lib/payments/paymentslip/helpers.js
 lib/payments/paymentslip/sendPaymentReminders.js
 lib/scheduler/importPayments.js
